@@ -1,4 +1,6 @@
 DIST gigolo-0.3.2.tar.bz2 147634 RMD160 45ff1f20d5efb78ad0698b4233cccbd01dfff2c1 SHA1 68f1e9c88a48a6680e43b71179ce97fb52084c54 SHA256 e4b20c058ba70f3aa0258ff16817e238303f5d1efb87dbac4acf016e628a7151
+DIST gigolo-0.4.0.tar.bz2 172912 RMD160 99d038c74d647e60bad19769495847ee68ef0254 SHA1 0f98bce33af79d9fd684eb4f8f2dfba5f79ee92a SHA256 2b89a222307c7e2733918e630096200cc50a19da0b6aaa67ddd13d61095f91be
 EBUILD gigolo-0.3.2.ebuild 1191 RMD160 13c2e9885e24cd64d875a70d1ae1e3d946b0f0f4 SHA1 70bfb835230eff8f8f401ba0f5a46ffd1f925141 SHA256 abed8caa97742a5f3d691b292ead99661f20abc1e4078db7dc79682161d239a9
-MISC ChangeLog 560 RMD160 d9dc27260ef8d512cead1ab10c5a116171d37b63 SHA1 3d3b47522173b5a38978b1fe7685ff395ac27ddf SHA256 20fd5eae189bd2e3b96029292084f339d6a0ea9c8af88b9b440df7d1272ac83a
+EBUILD gigolo-0.4.0.ebuild 1195 RMD160 00961f3abc95429a0c977e05005c4cf96abdde2c SHA1 db165d137077eeea82731a194cd77056320a12e7 SHA256 13983a2d14a2610295cf48015569ad4aa8d158ff9a7429c1f1644fc0eee34b2f
+MISC ChangeLog 688 RMD160 41a55ccfcf3da9cefb408bd6b9ada560e6d91774 SHA1 ef819f49e8fc882bc16eb07ae0124b4f1f84df54 SHA256 3effe03ee29dc3ad635844527744c32dfe8083d444275ccea2c98d85563cee20
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
